# oef_PAR_DIS_SYS

./: CMakeLists.txt  HANDLEIDING.txt  README.md
oefensessie1/: main.cpp  output.txt
oefensessie2/oefening_4/: oefening4.slurm  oefening4.slurm.o65160927  output_slurmquote.txt
oefensessie2/oefening_5/: main.cpp
oefensessie3/oef_10/: main.cpp
oefensessie3/oef_11/: main  main.cpp
oefensessie3/oef_12/: job.slurm  main  main.cpp  mainOneCore.out  mainTwoCores.out
oefensessie3/oef_8/: main.cpp
oefensessie3/oef_9/: main  main.cpp
oefensessie4/oef_13/: main  main.cpp
oefensessie4/oef_14/: main  main.cpp
oefensessie4/oef_15/: SafeQueue.h  a.out  main  main.cpp  som.h
oefensessie5/oef_16/: main.cpp
oefensessie5/oef_17/: main.cpp
oefensessie5/oef_18/: main.cpp
oefensessie5/oef_19/: main.cpp
oefensessie5/oef_20/: main.cpp  timer.h
oefensessie6/oef_21/: main.cu  output.txt
oefensessie6/oef_22/cuda_fractal_iiw/: fractal.cu  main.cpp
oefensessie6/oef_22/cuda_fractal_iiw_aangepast/: fractal.cu
oefensessie7/oef_23/: main.cu
oefensessie7/oef_24/: main.cu
oefensessie7/oef_24/encryption_iiw/: encrypt_cuda.cu
